--- a/resources/package.json
+++ b/resources/package.json
@@ -25,6 +25,7 @@
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
     "gulp-watch": "^4.3.11",
+    "gulp-webserver": "^0.9.1",
     "velocity-animate": "^1.5.0",
     "webpack": "^2.6.1"
   },
