--- a/resources/package.json
+++ b/resources/package.json
@@ -2,22 +2,21 @@
   "name": "myproject",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack",
-    "lint": "eslint test/carousel_training/js/*.js"
+    "dev": "webpack --mode development --watch",
+    "build": "webpack --mode production --watch"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.12",
     "es6-promise": "^4.1.1",
     "eslint": "^4.0.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-notify": "^3.0.0",
@@ -26,8 +25,10 @@
     "gulp-sass": "^3.1.0",
     "gulp-watch": "^4.3.11",
     "gulp-webserver": "^0.9.1",
+    "prettier": "^1.13.7",
     "velocity-animate": "^1.5.0",
-    "webpack": "^2.6.1"
+    "webpack": "^4.16.1",
+    "webpack-cli": "^3.0.8"
   },
   "dependencies": {
     "@types/pixi.js": "^4.5.4",
